* New main menu and article list context menu item "Reveal feed" which highlights the feed that the displayed article belongs to. (#1903)
* Feed list has new column "Item ID" which is hidden by default. Allows filtering feeds by their ID. (#966)
* External tools settings were redesigned and external tools can now be named. (#839)
* Ability to mark article above/below selected article as read/unread. (#244)
* New support for "RSS comments" specifications which is now per-feed configurable. (#878)
* Enclosures and attachments now can now be browsed, added, or removed via article filters. (#1024)
* Network proxy is now configurable even on a per-feed basis. So now we have per-feed, per-account and app-wide configuration options. (#417)
* New main menu items for focusing article preview, article list and feed list. (#1872)
* Added scrollable/paginated context menus where it makes sense. (#971)
* Turkish localization. (#1856)
* QtWebEngine is now gone and replace by [litehtml](https://github.com/litehtml/litehtml)-based article renderer.
* Default user data directory on Linux now does not contain spaces. (#1852)
* Article filters can now be reordered. (#908)
* You can see the number of disabled feeds in category/account details. (#1714)
* `Article filters` dialog was enhanced, allowing you to see which article properties are tweaked by the filter when testing the filter. Also, many other UI-related things were updated for that dialog. (#323, #1044, #1792, #1793)
* Category specifications are now supported for RSS, ATOM, RDF and JSON. It is also possible to work with these categories in article filters and convert them to labels. (#746)
* Feed list has initial focus when launching the app. (#1673)
* It is possible to turn anti-aliasing on or off for the whole app, or for article preview font or for article preview shapes. (#1432)
* It is possible to hide number of unread articles in main taskbar. (#1454)